--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,5 +11,10 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_API_KEY%&libraries=services,clusterer"
+    ></script>
   </body>
 </html>
